--- a/manuscript/00-abstract.Rmd
+++ b/manuscript/00-abstract.Rmd
@@ -1,3 +1,5 @@
 # Abstract
 
-  When individual subjects undergo imaging with multiple modalities, biological data is present not only within each modality, but also between modalities - that is, in how modalities covary at the voxel level. Previous studies have shown that the covariance structures between modalities, or intermodal coupling (IMCo), can be estimated between two modalities, and that two-modality IMCo reveals otherwise undiscovered patterns in neurodevelopment as well as other processes. However, previous IMCo methods are based on the slopes of local weighted linear regression lines, which are inherently asymmetric and limited to the two-modality setting. Here, we present a PCA-based generalization of IMCo which uses local covariance decompositions to define a symmetric, voxel-wise coupling coefficient valid for two or more modalities. We then demonstrate this method is spatially heterogeneous and varies with respect to age and sex over the course of neurodevelopment. As availability of multi-modal data increases, PCA-based IMCo offers a natural approach for summarizing relationships between multiple aspects of brain structure and function. An R package is provided.
+  When individual subjects undergo imaging with multiple modalities, biological data is present not only within each modality, but also between modalities - that is, in how modalities covary at the voxel level. Previous studies have shown that the covariance structures between modalities, or intermodal coupling (IMCo), can be estimated between two modalities, and that two-modality IMCo reveals otherwise undiscovered patterns in neurodevelopment as well as other processes. However, previous IMCo methods are based on the slopes of local weighted linear regression lines, which are inherently asymmetric and limited to the two-modality setting. Here, we present a PCA-based generalization of IMCo which uses local covariance decompositions to define a symmetric, voxel-wise coupling coefficient valid for two or more modalities. 
+  
+  We then use this method to study coupling between cerebral blood flow, resting state activations, and functional connectivity in 803 subjects between ages 8 and 23. We demonstrate this method is spatially heterogeneous and varies with respect to age and sex over the course of neurodevelopment. As availability of multi-modal data increases, PCA-based IMCo offers a natural approach for summarizing relationships between multiple aspects of brain structure and function. An R package is provided.
