--- a/manuscript/02-methods.Rmd
+++ b/manuscript/02-methods.Rmd
@@ -15,18 +15,19 @@
   ALFF and ReHo were estimated from six minutes of task-free functional data from a blood oxygen level-dependent (BOLD-weighted) 2D EPI sequence with the following settings: $T_R$ = 3000 ms; $T_E$ = 32 ms; FoV = 192 × 192 mm; matrix size = 64 x 64; number of slices = 46; slice thickness = 3 mm; inter-slice gap = 0 mm; resolution = 3 mm isotropic; 124 volumes. Subjects were instructed to stay awake, keep their eyes open and fixated on a displayed fixation cross, and remain still.
 
 ## Image processing
+  TODO
 
 ## Estimation of intermodal coupling
-  For each subject, we calculated voxel-wise IMCo between CBF, ALFF, and ReHo modalities. First, we applied a grey matter mask to each of the three modalities. Then, within each masked modality, we globally scaled intensities to a mean of 0 and a variance of 1. This scaling is necessary because eigendecomposition is later performed on local covariance matrices, so if modalities are defined on drastically different scales, decomposition outputs will reflect differences in baseline variance between modalities rather than local coupling. Next, for each voxel, we extracted local neighborhoods from each of the three modalities and weighted voxels within these local neighborhoods proportional to a Gaussian kernel over their Euclidean distances from the central voxel - in our study, we used FWHM = 3 which corresponds to 7x7x7 voxel (14x14x14mm) local neighborhoods and a standard deviation of ___mm for the Gaussian kernel. Then, we calculated the 3x3 weighted covariance matrix between the neighborhoods, performed eigendecomposition on them, and extracted the first eigenvalue. Lastly, we scaled the first eigenvalue such that its theoretical minimum was 0 and theoretical maximum was 1 and then performed a logit transformation so extreme values of coupling would be emphasized. This resulted in our voxel-level coupling value, where a large value suggests that the modalities covary strongly near that voxel.
+  For each subject, we calculated voxel-wise IMCo between CBF, ALFF, and ReHo modalities. First, we applied a grey matter mask to each of the three modalities. Then, within each masked modality, we globally scaled intensities to a mean of 0 and a variance of 1. This scaling is necessary because eigendecomposition is later performed on local covariance matrices, so if modalities are defined on drastically different scales, decomposition outputs will reflect differences in baseline overall variance between modalities rather than local covariance structures. Next, for each voxel, we extracted local neighborhoods from each of the three modalities and weighted voxels within these local neighborhoods proportional to a Gaussian kernel over their Euclidean distances from the central voxel - in our study, we used FWHM = 3 which corresponds to 7x7x7 voxel (14x14x14 mm) local neighborhoods and a standard deviation of 1.62 mm for the Gaussian kernel. Then, we calculated the 3x3 weighted covariance matrix between the neighborhoods, performed eigendecomposition on them, and extracted the proportion of variance explained by the first eigenvalue. Once all voxel-wise proportional first eigenvalues were extracted, we scaled all these values such that the minimum was 0 and maximum was 1 and then performed a logit transformation so extreme values of coupling would be emphasized. This resulted in our voxel-level coupling value, where a large value means that voxel's local covariance matrix could be well-summarized in a single dimension.
   
   For reference, in the three-modality setting, coupling values of -2, 0, and 2 correspond to the first eigenvector explaining 41%, 67%, and 92% of the total variance in that local neighborhood, respectively. In the two-modality setting, coupling values of -2, 0, and 2 correspond to the first eigenvector explaining 56%, 75%, and 94% of the total variance in that local neighborhood, respectively.
 
 ## Voxel-wise statistical analysis
   We created descriptive coupling maps by taking the means and variances across all 803 subjects at each voxel location in volumetric space. We then projected these mean and variance maps to the FreeSurfer sphere using PySurfer for visualization of spatial heterogeneity and cortical patterns [TOCITE].
   
-  To investigate biological relevance of PCA-based IMCo, we used linear regression at each voxel to explore whether coupling was associated with age or sex effects. In all linear regressions, we controlled for race and intra-scanner motion for both ASL and rfMRI scans. To control for multiple comparisons in these voxel-level tests, we used a false discovery rate of 0.05 to correct p-values. Then, we created binary thresholded masks indicating which p-values remained significant post-correction for both age and sex. For this analysis and following analyses, we performed identical analyses for each of the three modalities individually to explore whether the presence of age and sex effects on modality intensities corresponded to the presence of age and sex effects on coupling values (Supplementary Materials).
+  To investigate biological relevance of PCA-based IMCo, we used linear regression at each voxel to explore whether coupling was associated with age or sex effects. In all linear regressions, we controlled intra-scanner motion for both ASL and rfMRI scans. To control for multiple comparisons in these voxel-level tests, we used a false discovery rate of 0.05 to correct p-values. Then, we created binary thresholded masks indicating which p-values remained significant post-correction for both age and sex. For this analysis and following analyses, we performed identical analyses for each of the three modalities individually to explore whether the presence of age and sex effects on modality intensities corresponded to the presence of age and sex effects on coupling values (Supplementary Materials).
   
-  To visualize the extent of voxels where coupling was associated with age and sex, we counted the proportion of voxels with statistically significant age or sex effects in each of the Yeo 7 functional networks as well as in subcortical regions of interest. We also projected the thresholded p-value maps to the FreeSurfer sphere for visualization and further analyses.
+  To visualize the extent of voxels where coupling was associated with age and sex, we counted the proportion of voxels with statistically significant age or sex effects in each of the Yeo 7 functional networks as well as in AAL atlas subcortical regions of interest [@thomasyeoOrganizationHumanCerebral2011; @tzourio-mazoyerAutomatedAnatomicalLabeling2002]. We also projected the thresholded p-value maps to the FreeSurfer sphere for visualization and further analyses.
   
 ## Spin testing
   For each of the age and sex thresholded p-value maps projected to the FreeSurfer sphere, we then tested whether the proportion of significant voxels in each functional network was enriched when compared to the proportion of significant voxels overall. Because there is an underlying spatial distribution of significant voxels, we used the spin test [@alexander-bloch_testing_2018]. Briefly, the spin test is a conservative, permutation-based test that rotates the FreeSurfer sphere randomly to create an underlying null distribution that preserves spatial patterns. In our study, we estimated the null distribution over 2,000 permutations - for each permutation, we recorded the Jaccard similarity index between the thresholded p-value map and each of the Yeo 7 networks. Finally, for each network, we calculated the p-value as the proportion of null Jaccard similarity indices equal to or greater than the observed Jaccard similarity index.
