--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -655,3 +655,72 @@ Type: article},
   keywords = {Adult,Aged,Aged; 80 and over,Aging,Algorithms,Alzheimer Disease,Atrophy,Brain Mapping,Cerebral Cortex,Corpus Callosum,Dominance; Cerebral,Female,Humans,Image Processing; Computer-Assisted,Imaging; Three-Dimensional,Magnetic Resonance Imaging,Male,Middle Aged,Observer Variation,Reproducibility of Results,Software,Statistics as Topic},
   annotation = {08212},
 }
+@Article{thomasyeoOrganizationHumanCerebral2011,
+  title = {The Organization of the Human Cerebral Cortex Estimated by Intrinsic Functional Connectivity},
+  author = {B. T. {Thomas Yeo} and Fenna M. Krienen and Jorge Sepulcre and Mert R. Sabuncu and Danial Lashkari and Marisa Hollinshead and Joshua L. Roffman and Jordan W. Smoller and Lilla Z{\"o}llei and Jonathan R. Polimeni and Bruce Fischl and Hesheng Liu and Randy L. Buckner},
+  date = {2011-09},
+  journaltitle = {Journal of Neurophysiology},
+  shortjournal = {J Neurophysiol},
+  volume = {106},
+  number = {3},
+  eprint = {21653723},
+  eprinttype = {pmid},
+  pages = {1125--1165},
+  issn = {0022-3077},
+  doi = {10.1152/jn.00338.2011},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3174820/},
+  urldate = {2020-08-11},
+  abstract = {Information processing in the cerebral cortex involves interactions among distributed areas. Anatomical connectivity suggests that certain areas form local hierarchical relations such as within the visual system. Other connectivity patterns, particularly among association areas, suggest the presence of large-scale circuits without clear hierarchical relations. In this study the organization of networks in the human cerebrum was explored using resting-state functional connectivity MRI. Data from 1,000 subjects were registered using surface-based alignment. A clustering approach was employed to identify and replicate networks of functionally coupled regions across the cerebral cortex. The results revealed local networks confined to sensory and motor cortices as well as distributed networks of association regions. Within the sensory and motor cortices, functional connectivity followed topographic representations across adjacent areas. In association cortex, the connectivity patterns often showed abrupt transitions between network boundaries. Focused analyses were performed to better understand properties of network connectivity. A canonical sensory-motor pathway involving primary visual area, putative middle temporal area complex (MT+), lateral intraparietal area, and frontal eye field was analyzed to explore how interactions might arise within and between networks. Results showed that adjacent regions of the MT+ complex demonstrate differential connectivity consistent with a hierarchical pathway that spans networks. The functional connectivity of parietal and prefrontal association cortices was next explored. Distinct connectivity profiles of neighboring regions suggest they participate in distributed networks that, while showing evidence for interactions, are embedded within largely parallel, interdigitated circuits. We conclude by discussing the organization of these large-scale cerebral networks in relation to monkey anatomy and their potential evolutionary expansion in humans to support cognition.},
+  pmcid = {PMC3174820},
+  file = {/Users/hufengling/Zotero/storage/GVEH67LQ/Thomas Yeo et al. - 2011 - The organization of the human cerebral cortex esti.pdf},
+}
+
+@Article{tzourio-mazoyerAutomatedAnatomicalLabeling2002,
+  title = {Automated Anatomical Labeling of Activations in {{SPM}} Using a Macroscopic Anatomical Parcellation of the {{MNI MRI}} Single-Subject Brain},
+  author = {N. Tzourio-Mazoyer and B. Landeau and D. Papathanassiou and F. Crivello and O. Etard and N. Delcroix and B. Mazoyer and M. Joliot},
+  date = {2002-01},
+  journaltitle = {NeuroImage},
+  shortjournal = {Neuroimage},
+  volume = {15},
+  number = {1},
+  eprint = {11771995},
+  eprinttype = {pmid},
+  pages = {273--289},
+  issn = {1053-8119},
+  doi = {10.1006/nimg.2001.0978},
+  abstract = {An anatomical parcellation of the spatially normalized single-subject high-resolution T1 volume provided by the Montreal Neurological Institute (MNI) (D. L. Collins et al., 1998, Trans. Med. Imag. 17, 463-468) was performed. The MNI single-subject main sulci were first delineated and further used as landmarks for the 3D definition of 45 anatomical volumes of interest (AVOI) in each hemisphere. This procedure was performed using a dedicated software which allowed a 3D following of the sulci course on the edited brain. Regions of interest were then drawn manually with the same software every 2 mm on the axial slices of the high-resolution MNI single subject. The 90 AVOI were reconstructed and assigned a label. Using this parcellation method, three procedures to perform the automated anatomical labeling of functional studies are proposed: (1) labeling of an extremum defined by a set of coordinates, (2) percentage of voxels belonging to each of the AVOI intersected by a sphere centered by a set of coordinates, and (3) percentage of voxels belonging to each of the AVOI intersected by an activated cluster. An interface with the Statistical Parametric Mapping package (SPM, J. Ashburner and K. J. Friston, 1999, Hum. Brain Mapp. 7, 254-266) is provided as a freeware to researchers of the neuroimaging community. We believe that this tool is an improvement for the macroscopical labeling of activated area compared to labeling assessed using the Talairach atlas brain in which deformations are well known. However, this tool does not alleviate the need for more sophisticated labeling strategies based on anatomical or cytoarchitectonic probabilistic maps.},
+  langid = {english},
+  keywords = {Brain,Brain Mapping,Computer Graphics,Dominance; Cerebral,Humans,Image Processing; Computer-Assisted,Imaging; Three-Dimensional,Magnetic Resonance Imaging,Reference Values},
+}
+@Article{vandekarSubjectlevelMeasurementLocal2016,
+  title = {Subject-Level {{Measurement}} of {{Local Cortical Coupling}}},
+  author = {Simon N. Vandekar and Russell T. Shinohara and Armin Raznahan and Ryan D. Hopson and David R. Roalf and Kosha Ruparel and Ruben C. Gur and Raquel E. Gur and Theodore D. Satterthwaite},
+  date = {2016-06},
+  journaltitle = {NeuroImage},
+  shortjournal = {Neuroimage},
+  volume = {133},
+  eprint = {26956908},
+  eprinttype = {pmid},
+  pages = {88--97},
+  issn = {1053-8119},
+  doi = {10.1016/j.neuroimage.2016.03.002},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4889557/},
+  urldate = {2020-06-19},
+  abstract = {The human cortex is highly folded to allow for a massive expansion of surface area. Notably, the thickness of the cortex strongly depends on cortical topology, with gyral cortex sometimes twice as thick as sulcal cortex. We recently demonstrated that global differences in thickness between gyral and sulcal cortex continue to evolve throughout adolescence. However, human cortical development is spatially heterogeneous, and global comparisons lack power to detect localized differences in development or psychopathology. Here we extend previous work by proposing a new measure – local cortical coupling – that is sensitive to differences in the localized topological relationship between cortical thickness and sulcal depth. After estimation, subject-level coupling maps can be analyzed using standard neuroimaging analysis tools. Capitalizing on a large cross-sectional sample (n=932) of youth imaged as part of the Philadelphia Neurodevelopmental Cohort, we demonstrate that local coupling is spatially heterogeneous and exhibits nonlinear development-related trajectories. Moreover, we uncover sex differences in coupling that indicate divergent patterns of cortical topology. Developmental changes and sex differences in coupling support its potential as a neuroimaging phenotype for investigating neuropsychiatric disorders that are increasingly conceptualized as disorders of brain development. R code to estimate subject-level coupling maps from any two cortical surfaces generated by FreeSurfer is made publicly available along with this manuscript.},
+  pmcid = {PMC4889557},
+  keywords = {age-based differences,multi-modal coupling,neurodevelopment,philadelphia neurodevelopmental cohort,sex-based differences,statistical map,subject-level},
+  file = {/Users/hufengling/Zotero/storage/SP4HUB86/Vandekar et al. - 2016 - Subject-level Measurement of Local Cortical Coupli.pdf},
+}
+@Article{ballerDevelopmentalCouplingCerebral2021,
+  title = {Developmental Coupling of Cerebral Blood Flow and {{fMRI}} Fluctuations in Youth},
+  author = {Erica B. Baller and Alessandra M. Valcarcel and Azeez Adebimpe and Aaron Alexander-Bloch and Zaixu Cui and Ruben C. Gur and Raquel E. Gur and Bart L. Larsen and Kristin A. Linn and Carly M. O{\textquoteright}NADonnell and Adam R. Pines and Armin Raznahan and David R. Roalf and Valerie J. Sydnor and Tinashe M. Tapera and M. Dylan Tisdall and Simon Vandekar and Cedric H. Xia and John A. Detre and Russell T. Shinohara and Theodore D. Satterthwait},
+  date = {2021-07-29},
+  journaltitle = {bioRxiv},
+  publisher = {{Cold Spring Harbor Laboratory}},
+  doi = {10.1101/2021.07.28.454179},
+  url = {https://www.biorxiv.org/content/10.1101/2021.07.28.454179v1},
+  urldate = {2021-12-03},
+  abstract = {To support brain development during youth, the brain must balance energy delivery and consumption. Previous studies in adults have demonstrated high coupling between cerebral blood flow and brain function as measured using functional neuroimaging, but how this relationship evolves over adolescence is unknown. To address this gap, we studied a sample of 831 children and adolescents (478 females, ages 8-22) from the Philadelphia Neurodevelopmental Cohort who were scanned at 3T with both arterial spin labeled (ASL) MRI and resting-state functional MRI (fMRI). Local coupling between cerebral blood flow (CBF, from ASL) and the amplitude of low frequency fluctuations (ALFF, from fMRI) was first quantified using locally weighted regressions on the cortical surface. We then used generalized additive models to evaluate how CBF-ALFF coupling was associated with age, sex, and executive function. Enrichment of effects within canonical functional networks was evaluated using spin-based permutation tests. Our analyses revealed tight CBF-ALFF coupling across the brain. Whole-brain CBF-ALFF coupling decreased with age, largely driven by coupling decreases in the inferior frontal cortex, precuneus, visual cortex, and temporoparietal cortex (pfdr {$<$}0.05). Females had stronger coupling in the frontoparietal network than males (pfdr {$<$}0.05). Better executive function was associated with decreased coupling in the somatomotor network (pfdr {$<$}0.05). Overall, we found that CBF-ALFF coupling evolves in development, differs by sex, and is associated with individual differences in executive function. Future studies will investigate relationships between maturational changes in CBF-ALFF coupling and the presence of psychiatric symptoms in youth. SIGNIFICANCE The functions of the human brain are metabolically expensive and reliant on coupling between cerebral blood flow and neural activity. Previous neuroimaging studies in adults demonstrate tight physiology-function coupling, but how this coupling evolves over development is unknown. Here, we examine the relationship between blood flow as measured by arterial spin labeling and the amplitude of low frequency fluctuations from resting-state magnetic resonance imaging across a large sample of youth. We demonstrate regionally specific changes in coupling over age and show that variations in coupling are related to biological sex and executive function. Our results highlight the importance of CBF-ALFF coupling throughout development; we discuss its potential as a future target for the study of neuropsychiatric diseases.},
+  langid = {english},
+  file = {/Users/hufengling/Zotero/storage/9PVL8VQ7/Baller et al. - 2021 - Developmental coupling of cerebral blood flow and .pdf;/Users/hufengling/Zotero/storage/NWIPUYKI/2021.07.28.html},
+}
