--- a/ALFF_BASILc_REHO/R/surfplot.ipynb
+++ b/ALFF_BASILc_REHO/R/surfplot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -152,7 +158,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -214,6 +226,166 @@
     "    brain.add_data(surf_data_rh, min = min_whole, max = max_whole, hemi = 'rh')\n",
     "    brain.add_data(surf_data_lh, min = min_whole, max = max_whole, hemi = 'lh')\n",
     "    brain.add_text(x = 0.5, y = 0.85, text = nifti_name, name = nifti_name)\n",
+    "    \n",
+    "    brain.save_image(os.path.join(figures_dir, nifti_name + \".png\"))\n",
+    "    print(\"done: \" + nifti_name)\n",
+    "    \n",
+    "print(\"all done!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done: cbf-basil_sex-age_fdr05\n",
+      "done: alff_age_fdr05\n",
+      "done: cbf-basil_age_fdr05\n",
+      "done: reho_sex_fdr05\n",
+      "done: reho_age_fdr05\n",
+      "done: reho_sex-age_fdr05\n",
+      "done: alff_sex-age_fdr05\n",
+      "done: alff_sex_fdr05\n",
+      "done: cbf-basil_sex_fdr05\n",
+      "done: global_wcov_sex_fdr05\n",
+      "done: unscaled_wcor_sex-age_fdr05\n",
+      "done: global_wcov_sex-age_fdr05\n",
+      "done: unscaled_wcor_sex_fdr05\n",
+      "done: unscaled_wcor_age_fdr05\n",
+      "done: global_wcov_age_fdr05\n",
+      "done: cbf-basil_variance\n",
+      "done: cbf-basil_mean\n",
+      "done: unscaled_wcor_mean\n",
+      "done: global_wcov_variance\n",
+      "done: reho_variance\n",
+      "done: unscaled_wcor_variance\n",
+      "done: alff_mean\n",
+      "done: reho_mean\n",
+      "done: alff_variance\n",
+      "done: global_wcov_mean\n",
+      "all done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "figures_dir = os.path.join(output_dir, \"figures/surfaces_fwhm0_highres\")\n",
+    "os.makedirs(figures_dir, exist_ok=True)\n",
+    "\n",
+    "reg_file = os.path.join(os.environ[\"FREESURFER_HOME\"], \"average/mni152.register.dat\")\n",
+    "\n",
+    "for nifti_path in nifti_list:\n",
+    "    nifti_name = nifti_path.split(\"/\")[-1].split(\".\")[0]\n",
+    "    brain = Brain(subject_id = \"fsaverage\", \n",
+    "                  hemi = \"split\", \n",
+    "                  surf = \"inflated\", \n",
+    "                  title = nifti_name,\n",
+    "                  views=['lat', 'med'], \n",
+    "                  background=\"white\",\n",
+    "                  size = 2400)\n",
+    "    \n",
+    "    if (nifti_path.find(\"fdr05\") == -1):\n",
+    "        surf_data_lh = project_volume_data(nifti_path, \"lh\", reg_file, smooth_fwhm = 0)\n",
+    "        surf_data_rh = project_volume_data(nifti_path, \"rh\", reg_file, smooth_fwhm = 0)\n",
+    "    else:\n",
+    "        surf_data_lh = project_volume_data(nifti_path, \"lh\", reg_file, smooth_fwhm = 0, projsum=\"max\").astype(bool)\n",
+    "        surf_data_rh = project_volume_data(nifti_path, \"rh\", reg_file, smooth_fwhm = 0, projsum=\"max\").astype(bool)\n",
+    "    \n",
+    "    min_whole = min(min(surf_data_lh), min(surf_data_rh))\n",
+    "    max_whole = max(max(surf_data_lh), max(surf_data_rh))\n",
+    "    \n",
+    "    if (min_whole == max_whole):\n",
+    "        max_whole = 1\n",
+    "\n",
+    "    brain.add_data(surf_data_rh, min = min_whole, max = max_whole, hemi = 'rh')\n",
+    "    brain.add_data(surf_data_lh, min = min_whole, max = max_whole, hemi = 'lh')\n",
+    "    brain.add_text(x = 0.5, y = 0.85, text = nifti_name, name = nifti_name)\n",
+    "    brain.hide_colorbar(row = 0, col = 0)\n",
+    "    brain.hide_colorbar(row = 0, col = 1)\n",
+    "    brain.hide_colorbar(row = 1, col = 0)\n",
+    "    \n",
+    "    brain.save_image(os.path.join(figures_dir, nifti_name + \".png\"))\n",
+    "    print(\"done: \" + nifti_name)\n",
+    "    \n",
+    "print(\"all done!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done: cbf-basil_sex-age_fdr05\n",
+      "done: alff_age_fdr05\n",
+      "done: cbf-basil_age_fdr05\n",
+      "done: reho_sex_fdr05\n",
+      "done: reho_age_fdr05\n",
+      "done: reho_sex-age_fdr05\n",
+      "done: alff_sex-age_fdr05\n",
+      "done: alff_sex_fdr05\n",
+      "done: cbf-basil_sex_fdr05\n",
+      "done: global_wcov_sex_fdr05\n",
+      "done: unscaled_wcor_sex-age_fdr05\n",
+      "done: global_wcov_sex-age_fdr05\n",
+      "done: unscaled_wcor_sex_fdr05\n",
+      "done: unscaled_wcor_age_fdr05\n",
+      "done: global_wcov_age_fdr05\n",
+      "done: cbf-basil_variance\n",
+      "done: cbf-basil_mean\n",
+      "done: unscaled_wcor_mean\n",
+      "done: global_wcov_variance\n",
+      "done: reho_variance\n",
+      "done: unscaled_wcor_variance\n",
+      "done: alff_mean\n",
+      "done: reho_mean\n",
+      "done: alff_variance\n",
+      "done: global_wcov_mean\n",
+      "all done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "figures_dir = os.path.join(output_dir, \"figures/surfaces_fwhm0_highres_white\")\n",
+    "os.makedirs(figures_dir, exist_ok=True)\n",
+    "\n",
+    "reg_file = os.path.join(os.environ[\"FREESURFER_HOME\"], \"average/mni152.register.dat\")\n",
+    "\n",
+    "for nifti_path in nifti_list:\n",
+    "    nifti_name = nifti_path.split(\"/\")[-1].split(\".\")[0]\n",
+    "    brain = Brain(subject_id = \"fsaverage\", \n",
+    "                  hemi = \"split\", \n",
+    "                  surf = \"white\", \n",
+    "                  title = nifti_name,\n",
+    "                  views=['lat', 'med'], \n",
+    "                  background=\"white\",\n",
+    "                  size = 2400)\n",
+    "    \n",
+    "    if (nifti_path.find(\"fdr05\") == -1):\n",
+    "        surf_data_lh = project_volume_data(nifti_path, \"lh\", reg_file, smooth_fwhm = 0)\n",
+    "        surf_data_rh = project_volume_data(nifti_path, \"rh\", reg_file, smooth_fwhm = 0)\n",
+    "    else:\n",
+    "        surf_data_lh = project_volume_data(nifti_path, \"lh\", reg_file, smooth_fwhm = 0, projsum=\"max\").astype(bool)\n",
+    "        surf_data_rh = project_volume_data(nifti_path, \"rh\", reg_file, smooth_fwhm = 0, projsum=\"max\").astype(bool)\n",
+    "    \n",
+    "    min_whole = min(min(surf_data_lh), min(surf_data_rh))\n",
+    "    max_whole = max(max(surf_data_lh), max(surf_data_rh))\n",
+    "    \n",
+    "    if (min_whole == max_whole):\n",
+    "        max_whole = 1\n",
+    "\n",
+    "    brain.add_data(surf_data_rh, min = min_whole, max = max_whole, hemi = 'rh')\n",
+    "    brain.add_data(surf_data_lh, min = min_whole, max = max_whole, hemi = 'lh')\n",
+    "    brain.add_text(x = 0.5, y = 0.85, text = nifti_name, name = nifti_name)\n",
+    "    brain.hide_colorbar(row = 0, col = 0)\n",
+    "    brain.hide_colorbar(row = 0, col = 1)\n",
+    "    brain.hide_colorbar(row = 1, col = 0)\n",
     "    \n",
     "    brain.save_image(os.path.join(figures_dir, nifti_name + \".png\"))\n",
     "    print(\"done: \" + nifti_name)\n",
